--- a/index.html
+++ b/index.html
@@ -1,41 +1,98 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-<title>SimuCrisis</title>
-<meta charset="UTF-8">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>SimuCrisis — Project Proposal (VR Pandemic Simulation)</title>
+<meta name="description" content="SimuCrisis: Unity-based VR pandemic simulation & crisis management platform — CMPE491 Project Proposal.">
 <style>
-body { font-family: Arial; padding: 40px; background: #f9f9f9; }
-h1 { color: #2b6cb0; }
-.container {
-  max-width: 800px;
-  margin: auto;
-  padding: 20px;
-  background: white;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
+  :root{
+    --bg: #ffffff;
+    --surface: #f7f9fc;
+    --card: #ffffff;
+    --text: #0f172a;
+    --muted:#64748b;
+    --brand:#0b5ed7;      /* academic blue */
+    --accent:#0891b2;     /* medical teal */
+    --line:#e5e7eb;
+    --radius:16px;
+    --shadow: 0 10px 24px rgba(2,8,23,.06);
+    --max: 1080px;
+  }
+  *{box-sizing:border-box}
+  html,body{margin:0;font-family: ui-sans-serif, system-ui, Segoe UI, Roboto, Arial; color:var(--text); background:var(--bg)}
+  a{color:var(--brand); text-decoration:none}
+  a:hover{text-decoration:underline}
+  .container{max-width:var(--max); margin:auto; padding:24px}
+  /* Background (soft coronavirus micrograph) */
+  body::before{
+    content:"";
+    position:fixed; inset:0;
+    background:
+      linear-gradient(to bottom right, rgba(255,255,255,.92), rgba(247,249,252,.92)),
+      url('https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Coronaviruses_004_lores.jpg/1280px-Coronaviruses_004_lores.jpg') center/cover no-repeat;
+    z-index:-1;
+    filter: saturate(0.9) contrast(1.05) brightness(1.05);
+  }
+  /* Nav */
+  .nav{background:rgba(255,255,255,.8); backdrop-filter: blur(8px); border-bottom:1px solid var(--line)}
+  .nav .inner{display:flex; align-items:center; justify-content:space-between; gap:16px}
+  .brand{display:flex; align-items:center; gap:12px}
+  .logo{width:36px; height:36px; border-radius:10px; background:linear-gradient(135deg,var(--brand),var(--accent)); box-shadow:var(--shadow)}
+  .links a{margin:0 10px; color:#0f172a}
+  .links a:hover{color:var(--brand)}
+  /* Hero */
+  .hero{padding:36px 24px}
+  .hero h1{font-size:clamp(28px,4vw,40px); margin:10px 0}
+  .hero p{color:var(--muted); max-width:860px}
+  .badges{display:flex; gap:10px; flex-wrap:wrap; margin:14px 0}
+  .badge{font-size:13px; border:1px solid var(--line); padding:6px 10px; border-radius:999px; background:var(--surface)}
+  .cta{display:flex; gap:12px; flex-wrap:wrap; margin-top:14px}
+  .btn{display:inline-flex; align-items:center; gap:10px; padding:12px 16px; border-radius:12px; border:1px solid var(--line); background:#fff; box-shadow:var(--shadow); color:#0f172a; text-decoration:none}
+  .btn.primary{background:linear-gradient(135deg,var(--brand),var(--accent)); color:#fff; border:none}
+  /* Cards */
+  .grid{display:grid; gap:18px}
+  .cols-2{grid-template-columns: repeat(2,1fr)}
+  .cols-3{grid-template-columns: repeat(3,1fr)}
+  .card{background:var(--card); border:1px solid var(--line); border-radius:var(--radius); box-shadow:var(--shadow); padding:20px}
+  .card h3{margin:6px 0 6px}
+  h2{margin:0 0 10px; font-size:26px}
+  p{line-height:1.6}
+  /* Footer */
+  footer{border-top:1px solid var(--line); color:var(--muted); padding:24px}
+  /* Responsive */
+  @media (max-width: 900px){
+    .cols-2, .cols-3{grid-template-columns:1fr}
+  }
 </style>
 </head>
 <body>
-<div class="container">
-<h1>SimuCrisis</h1>
-<p><b>Pandemic Simulation & Crisis Management Platform</b></p>
+  <!-- Nav -->
+  <div class="nav">
+    <div class="container inner">
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <strong>SimuCrisis</strong>
+      </div>
+      <div class="links">
+        <a href="#about">About</a>
+        <a href="#features">Features</a>
+        <a href="#demo">VR Demo</a>
+        <a href="#team">Team</a>
+        <a href="#docs">Docs</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
+  </div>
 
-<h2>Team Members</h2>
-<ul>
-<li>Yankı Ufuk Dülger</li>
-<li>Muhammed Anıl Doni</li>
-<li>Berfin Apaçık</li>
-<li>Vahap Kenan Fidanol</li>
-</ul>
+  <!-- Hero -->
+  <header class="hero container">
+    <div class="badges">
+      <span class="badge">Unity</span>
+      <span class="badge">VR Simulation</span>
+      <span class="badge">Education & Research</span>
+    </div>
+    <h1>SimuCrisis — VR Pandemic Simulation & Crisis Management</h1>
+    <p><b>EN:</b> Explore pandemic dynamics in VR. Test policies like lockdowns, vaccination, and healthcare allocation, and observe real-time outcomes via dashboards, heatmaps, and reports.</p>
+    <p><b>TR:</b> Pandemi
 
-<h2>Supervisor</h2>
-<p>Dr. Eren Ulu</p>
-
-<h2>Project Description</h2>
-<p>SimuCrisis is an educational simulation platform built using Unity to model pandemic dynamics and crisis response strategies. Users can apply real-world interventions such as lockdowns, vaccination strategies, and resource allocation and visualize outcomes with interactive charts and maps.</p>
-
-<p>Stay tuned — more updates coming soon!</p>
-</div>
-</body>
-</html>
