--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ ul { margin-top: 10px; }
   <div class="section">
     <h2>Jury Members</h2>
     <ul>
-      <li>Hakkı Gökhan İlk</li>
+      <li>Hakkı Gökhan </li>
       <li>-</li>
     </ul>
   </div>
