--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@ body {
 
   background:
     linear-gradient(rgba(255,255,255,0.92), rgba(255,255,255,0.92)),
-    url("https://i.imgur.com/8EDf0Gf.jpg")
+    url("https://images.unsplash.com/photo-1583324113626-70df0f4deaab?auto=format&fit=crop&w=1600&q=60")
     center/cover no-repeat fixed;
-
-  background-attachment: fixed;
 }
 
 
@@ -52,7 +50,7 @@ ul { margin-top: 10px; }
 
 <div class="container">
 
-  <h1>SimuCrisis Webpage</h1>
+  <h1 style="text-align:center; font-size: 32px;">SimuCrisis</h1>
   <h3>Pandemic Simulation & Crisis Management Platform</h3>
 
   <!-- TEAM -->
