--- a/index.html
+++ b/index.html
@@ -3,102 +3,116 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>SimuCrisis Webpage</title>
+<title>SimuCrisis</title>
 
 <style>
-/* Clean academic + subtle pandemic background */
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
+  /* --- Page background: real virus photo + soft white overlay --- */
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
 
-  background:
-    linear-gradient(rgba(255,255,255,0.92), rgba(255,255,255,0.92)),
-    url("https://images.unsplash.com/photo-1583324113626-70df0f4deaab?auto=format&fit=crop&w=1600&q=60")
-    center/cover no-repeat fixed;
-}
+    background:
+      /* adjust 0.75 → 0.65 to show more of the image, 0.85 to make it softer */
+      linear-gradient(rgba(255,255,255,0.75), rgba(255,255,255,0.75)),
+      url("https://images.unsplash.com/photo-1583324113626-70df0f4deaab?auto=format&fit=crop&w=1600&q=60")
+      center/cover no-repeat fixed;
 
+    background-attachment: fixed;
+    /* optional depth-of-field look; remove if you prefer sharper */
+    backdrop-filter: blur(2px);
+  }
 
-/* Content card */
-.container {
-  max-width: 900px;
-  margin: 40px auto;
-  background: white;
-  padding: 35px;
-  border-radius: 15px;
-  box-shadow: 0 0 20px rgba(0,0,0,0.15);
-}
+  /* --- Main white card --- */
+  .container {
+    max-width: 900px;
+    margin: 40px auto;
+    background: #ffffff;
+    padding: 35px;
+    border-radius: 18px;
+    box-shadow: 0 6px 24px rgba(0,0,0,0.12);
+  }
 
-/* Headings */
-h1, h2 {
-  color: #0056b3;
-  font-family: Verdana, sans-serif;
-}
+  /* --- Typo / layout --- */
+  h1, h2 {
+    color: #0b5ed7; /* academic blue */
+    font-family: Verdana, sans-serif;
+    margin-top: 0;
+  }
+  h1 { text-align: center; margin-bottom: 8px; }
+  h3 { margin-top: 0; }
 
-/* Section styling */
-.section {
-  margin-bottom: 25px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #ccc;
-}
+  .section {
+    margin: 20px 0 10px;
+    padding-bottom: 12px;
+    border-bottom: 1px solid #e2e8f0;
+  }
 
-ul { margin-top: 10px; }
+  ul { margin-top: 10px; }
+
+  /* --- Dash prefix for description paragraphs --- */
+  .dash { margin: 0 0 12px; line-height: 1.55; }
+  .dash::before { content: "– "; }  /* en dash */
+
+  /* small screen tweaks */
+  @media (max-width: 600px) {
+    .container { margin: 20px 12px; padding: 22px; }
+  }
 </style>
 </head>
 
 <body>
+  <div class="container">
+    <h1>SimuCrisis</h1>
+    <h3>Pandemic Simulation & Crisis Management Platform</h3>
 
-<div class="container">
+    <!-- TEAM -->
+    <div class="section">
+      <h2>Team Members</h2>
+      <ul>
+        <li>Yankı Ufuk Dülger — 47149468834</li>
+        <li>Muhammed Anıl Doni —</li>
+        <li>Berfin Apaçık —</li>
+        <li>Vahap Kenan Fidanol — 1937948397</li>
+      </ul>
+    </div>
 
-  <h1 style="text-align:center; font-size: 32px;">SimuCrisis</h1>
-  <h3>Pandemic Simulation & Crisis Management Platform</h3>
+    <!-- SUPERVISOR -->
+    <div class="section">
+      <h2>Supervisor</h2>
+      <p>Dr. Eren Ulu</p>
+    </div>
 
-  <!-- TEAM -->
-  <div class="section">
-    <h2>Team Members</h2>
-    <ul>
-      <li>Yankı Ufuk Dülger — 47149468834</li>
-      <li>Muhammed Anıl Doni —</li>
-      <li>Berfin Apaçık —</li>
-      <li>Vahap Kenan Fidanol — 1937948397</li>
-    </ul>
+    <!-- JURY -->
+    <div class="section">
+      <h2>Jury Members</h2>
+      <ul>
+        <li>Hakkı Gökhan İlk</li>
+      </ul>
+    </div>
+
+    <!-- DESCRIPTION -->
+    <div class="section">
+      <h2>Project Description</h2>
+
+      <p class="dash">
+        SimuCrisis is an educational simulation platform developed with Unity to demonstrate pandemic disaster management.
+        The system models virus spread and response strategies within a virtual population using historical data. Users act
+        as policymakers to implement actions such as lockdowns, vaccinations, and healthcare investments.
+      </p>
+
+      <p class="dash">
+        Through interactive visual analytics including charts, heatmaps, and reports, the platform illustrates how different
+        strategies influence infection rates, recovery outcomes, and resource use. The backend manages simulation results and
+        pandemic datasets, while the Unity interface provides visualization and real-time feedback.
+      </p>
+
+      <p class="dash">
+        SimuCrisis targets educators, students, and researchers, offering a safe environment to explore crisis decision-making.
+        By combining data-driven modeling with visualization, the project enhances understanding of pandemic dynamics and
+        supports educational and institutional preparedness.
+      </p>
+    </div>
   </div>
-
-  <!-- SUPERVISOR -->
-  <div class="section">
-    <h2>Supervisor</h2>
-    <p>Dr. Eren Ulu</p>
-  </div>
-
-  <!-- JURY -->
-  <div class="section">
-    <h2>Jury Members</h2>
-    <ul>
-      <li>Hakkı Gökhan </li>
-      <li>-</li>
-    </ul>
-  </div>
-
-  <!-- DESCRIPTION -->
-  <div class="section">
-    <h2>Project Description</h2>
-    <p>
-        SimuCrisis is an educational simulation platform developed with Unity to demonstrate pandemic disaster management. 
-      The system models virus spread and response strategies within a virtual population using historical data. 
-      Users act as policymakers to implement actions such as lockdowns, vaccinations, and healthcare investments.
-    </p>
-    <p>
-        Through interactive visual analytics including charts, heatmaps, and reports, the platform illustrates how different strategies 
-      influence infection rates, recovery outcomes, and resource use. The backend manages simulation results and pandemic datasets, 
-      while the Unity interface provides visualization and real-time feedback.
-    </p>
-    <p>
-        SimuCrisis targets educators, students, and researchers, offering a safe environment to explore crisis decision-making. 
-      By combining data-driven modeling with visualization, it enhances understanding of pandemic dynamics and supports preparedness.
-    </p>
-  </div>
-
-</div>
-
 </body>
 </html>
