--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <div class="section">
       <h2>Jury Members</h2>
       <ul>
-        <li>Hakkı Gökhan İlk</li>
+        <li>Hakkı Gökhan </li>
       </ul>
     </div>
 
