--- a/index.html
+++ b/index.html
@@ -109,16 +109,15 @@
       <h2>Project Description</h2>
 
       <p class="dash">
-        SimuCrisis is an educational simulation platform developed with Unity to demonstrate pandemic disaster management. The system models virus spread and response strategies within a virtual population using historical data. Users act as policymakers to implement actions such as lockdowns, vaccinations, and healthcare investments.
+        SimuCrisis is an educational simulation application developed with Unity. The purpose of SimuCrisis application is to demonstrate pandemic disaster management. SimuCrisis models virus spread, response strategies within a virtual population using historical data. Users can take  actions such as lockdowns, vaccinations, and healthcare investments to mitigate the consequences of the pandemic.
       </p>
 
       <p class="dash">
-        Through interactive visual analytics including charts, heatmaps, and reports, the platform illustrates how different strategies influence infection rates, recovery outcomes, and resource use. The backend manages simulation results and pandemic datasets, while the Unity interface provides visualization and real-time feedback.
+        The application shows how different prevention strategies affect infection rates, recovery results, and resource usage using interactive visual analytics, such as charts, heatmaps, and reports. The Unity interface offers real-time feedback and visualization, while the backend maintains simulation results and historical pandemic datasets.
+SimuCrisis offers a safe environment to explore decision making about pandemic crises.Hence, SimuCrisis primarily targets educators, researchers and policymakers about pandemics. SimuCrisis enhances understanding of pandemic dynamics and supports educational and institutional readiness by combining data-driven modeling with visualization.
       </p>
 
-      <p class="dash">
-        SimuCrisis targets educators, students, and researchers, offering a safe environment to explore crisis decision-making. By combining data-driven modeling with visualization, the project enhances understanding of pandemic dynamics and supports educational and institutional preparedness.
-      </p>
+      
     </div>
   </div>
 </body>
