--- a/index.html
+++ b/index.html
@@ -109,12 +109,27 @@
       <h2>Project Description</h2>
 
       <p class="dash">
-        SimuCrisis is an educational simulation application developed with Unity. The purpose of SimuCrisis application is to demonstrate pandemic disaster management. SimuCrisis models virus spread, response strategies within a virtual population using historical data. Users can take  actions such as lockdowns, vaccinations, and healthcare investments to mitigate the consequences of the pandemic.
+        SimuCrisis is an educational simulation application developed with Unity.
+The purpose of SimuCrisis application is to demonstrate pandemic disaster
+management. SimuCrisis models virus spread, response strategies within a
+virtual population using historical data. Users can take actions such as
+lockdowns, vaccinations, and healthcare investments to mitigate the
+consequences of the pandemic
       </p>
 
       <p class="dash">
-        The application shows how different prevention strategies affect infection rates, recovery results, and resource usage using interactive visual analytics, such as charts, heatmaps, and reports. The Unity interface offers real-time feedback and visualization, while the backend maintains simulation results and historical pandemic datasets.
-SimuCrisis offers a safe environment to explore decision making about pandemic crises.Hence, SimuCrisis primarily targets educators, researchers and policymakers about pandemics. SimuCrisis enhances understanding of pandemic dynamics and supports educational and institutional readiness by combining data-driven modeling with visualization.
+       The application shows how different prevention strategies affect infection
+rates, recovery results, and resource usage using interactive visual analytics,
+such as charts, heatmaps, and reports. The Unity interface offers real-time
+feedback and visualization, while the backend maintains simulation results and
+historical pandemic datasets.
+      </p>
+      <p class="dash">
+        SimuCrisis offers a safe environment to explore decision making about
+pandemic crises.Hence, SimuCrisis primarily targets educators, researchers and
+policymakers about pandemics. SimuCrisis enhances understanding of
+pandemic dynamics and supports educational and institutional readiness by
+combining data-driven modeling with visualization.
       </p>
 
       
