--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
       <h2>Jury Members</h2>
       <ul>
         <li>Hakkı Gökhan İlk</li>
+        <li> Ayşe Yasemin Seydim</li>
       </ul>
     </div>
 
