--- a/index.html
+++ b/index.html
@@ -163,10 +163,8 @@
 
     <!-- FOOTER LINK TO REPORT -->
     <div class="footer">
-      <p>
-        <a href="specs.html">📄 View Full Project Specifications Report</a>
-      </p>
-      <a class="button-link" href="specs.html">Open Report</a>
+    
+      <a class="button-link" href="specs.html">Open Project Specifications Report</a>
     </div>
   </div>
 </body>
