--- a/specs.html
+++ b/specs.html
@@ -60,23 +60,23 @@
     <!-- INTRODUCTION -->
     <div class="section">
       <h2>1. Introduction</h2>
-      <p>In today’s world, the ability to manage health crises is very important. Pandemics affect many parts of life such as health, economy, and social structure. SimuCrisis is an educational simulation that helps people understand how different decisions during a pandemic can change the results. The project is developed with Unity and uses data and simple disease models to show how viruses spread and how management decisions work. Through this system, users can test ideas like lockdowns, vaccination plans, or increasing hospital capacity and see how these decisions affect infection rates and healthcare systems.</p>
+      <p class="dash"> In today’s world, the ability to manage health crises is very important. Pandemics affect many parts of life such as health, economy, and social structure. SimuCrisis is an educational simulation that helps people understand how different decisions during a pandemic can change the results. The project is developed with Unity and uses data and simple disease models to show how viruses spread and how management decisions work. Through this system, users can test ideas like lockdowns, vaccination plans, or increasing hospital capacity and see how these decisions affect infection rates and healthcare systems.</p>
 
-      <p>SimuCrisis gives users an interactive and visual way to explore crisis management. It provides graphs, heatmaps, and reports to show how the situation changes over time. The goal is to make learning about pandemics easier for educators, researchers, and policymakers. The project combines scientific models with an easy-to-use interface to support better understanding and awareness.</p>
+      <p class="dash">SimuCrisis gives users an interactive and visual way to explore crisis management. It provides graphs, heatmaps, and reports to show how the situation changes over time. The goal is to make learning about pandemics easier for educators, researchers, and policymakers. The project combines scientific models with an easy-to-use interface to support better understanding and awareness.</p>
     </div>
 
     <!-- DESCRIPTION -->
     <div class="section">
       <h3>1.1 Description</h3>
-      <p>SimuCrisis is a digital simulation tool that lets users control and observe a virtual population during a pandemic. Users can change values like infection rate, recovery time, or medical capacity, and see the results instantly. They can apply actions such as closing schools, setting restrictions, or starting vaccination programs. The program then calculates the new situation and shows the effects visually in real time.</p>
+      <p class="dash">SimuCrisis is a digital simulation tool that lets users control and observe a virtual population during a pandemic. Users can change values like infection rate, recovery time, or medical capacity, and see the results instantly. They can apply actions such as closing schools, setting restrictions, or starting vaccination programs. The program then calculates the new situation and shows the effects visually in real time.</p>
 
-      <p>The purpose of SimuCrisis is to help users understand how different strategies work and what challenges decision-makers face. It focuses on being simple, flexible, and informative so that it can be used in both classrooms and research studies.</p>
+      <p class="dash">The purpose of SimuCrisis is to help users understand how different strategies work and what challenges decision-makers face. It focuses on being simple, flexible, and informative so that it can be used in both classrooms and research studies.</p>
     </div>
 
     <!-- CONSTRAINTS -->
     <div class="section">
       <h3>1.2 Constraints</h3>
-      <p>The project must follow several important limits such as economic, environmental, social, political, ethical, health, manufacturability, and sustainability factors. These help make sure that the system is realistic, responsible, and long-lasting.</p>
+      <p class = "dash">The project must follow several important limits such as economic, environmental, social, political, ethical, health, manufacturability, and sustainability factors. These help make sure that the system is realistic, responsible, and long-lasting.</p>
 
       <p><b>Economic Constraints:</b> Developed with limited resources using Unity’s free version and open-source tools to minimize cost.</p>
       <p><b>Environmental Constraints:</b> Optimized for local data processing to reduce energy use instead of relying on cloud computing.</p>
